[package]
name = "pt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
dirs = "5.0.1"
fs2 = "0.4.3"
notify-rust = "4.8.0"
rodio = "0.17.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
